@@ -333,4 +333,8 @@ $lang['admin']['titleattribute'] = 'Title Attribute';
 $lang['admin']['tabindex'] = 'Tab Index';
 $lang['admin']['accesskey'] = 'Access Key';
 $lang['admin']['sitedownwarning'] = '<strong>Warning:</strong> Your site is currently showing a "Site Down for Maintainence" message.  Remove the %s file to resolve this.';
+$lang['admin']['deletecontent'] = 'Delete Content';
+$lang['admin']['deletepages'] = 'Delete these pages?';
+$lang['admin']['selecteditems'] = 'Selected Items';
+$lang['admin']['inactive'] = 'Inactive';
 ?>
